<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    >
        <include layout="@layout/name_app"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_weight="2"
        android:padding="15dp"
        android:orientation="vertical"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label_1"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
            />
            <EditText
                android:id="@+id/name_email_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/bg_secondary"
                android:hint="@string/login_placeholder_1"
                android:paddingLeft="20dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/round_style"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_label_2"
                    android:textColor="@color/white"
                />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_forgotten_password"
                    android:textColor="@color/secondary"
                    android:gravity="end"
                />
            </LinearLayout>
            <EditText
                android:id="@+id/name_password_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/bg_secondary"
                android:paddingLeft="20dp"
                android:hint="@string/login_placeholder_2"
                android:textColorHint="@color/white"
                android:background="@drawable/round_style"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            >
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login_remember_me"
                android:textSize="16sp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/name_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/secondary"
                android:text="@string/login_submit_login"
                android:textSize="16sp"
                android:background="@drawable/round_style"

                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>