<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="@color/bg_secondary"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_secondary"
            android:padding="10dp"
            android:src="@drawable/ic_credit" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/name_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/shopping"
        app:layout_constraintBottom_toTopOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/name_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/course"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/view_separation"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/name_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/view_separation"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/secondary"/>

    <TextView
        android:id="@+id/name_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_separation"
        android:textColor="@color/gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>